# lara_rgbd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
data/rgbd_dataset/: download_benchmark_data.urls  download_benchmark_files.sh
data/rgbd_dataset/tools/: extract_odometry.py
doc/: manifest.yaml
doc/html/: add__pointclouds__to__bagfile_8py.html  add__pointclouds__to__bagfile_8py_source.html  annotated.html  associate_8py.html  associate_8py_source.html  classSensorProcessor-members.html  classSensorProcessor.html  classes.html  evaluate__ate_8py.html  evaluate__ate_8py_source.html  evaluate__rpe_8py.html  evaluate__rpe_8py_source.html  extract__odometry_8py.html  extract__odometry_8py_source.html  files.html  functions.html  functions_func.html  functions_vars.html  generate__pointcloud_8py.html  generate__pointcloud_8py_source.html  generate__registered__pointcloud_8py.html  generate__registered__pointcloud_8py_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index-msg.html  index.html  mainpage_8dox.html  namespaceadd__pointclouds__to__bagfile.html  namespaceassociate.html  namespaceevaluate__ate.html  namespaceevaluate__rpe.html  namespaceextract__odometry.html  namespacegenerate__pointcloud.html  namespacegenerate__registered__pointcloud.html  namespacemembers.html  namespacemembers_func.html  (+23 more)
doc/html/latex/: add__pointclouds__to__bagfile_8py.tex  annotated.tex  associate_8py.tex  classSensorProcessor.tex  doxygen.sty  evaluate__ate_8py.tex  evaluate__rpe_8py.tex  extract__odometry_8py.tex  files.tex  generate__pointcloud_8py.tex  generate__registered__pointcloud_8py.tex  index.tex  namespaceadd__pointclouds__to__bagfile.tex  namespaceassociate.tex  namespaceevaluate__ate.tex  namespaceevaluate__rpe.tex  namespaceextract__odometry.tex  namespacegenerate__pointcloud.tex  namespacegenerate__registered__pointcloud.tex  namespaceplot__trajectory__into__image.tex  namespaces.tex  plot__trajectory__into__image_8py.tex  refman.tex  sensor__processor_8cpp.tex  sensor__processor_8cpp__incl.eps  sensor__processor_8cpp__incl.md5  sensor__processor_8h.tex  sensor__processor_8h__dep__incl.eps  sensor__processor_8h__dep__incl.md5  sensor__processor_8h__incl.eps  sensor__processor_8h__incl.md5  sensor__processor__node_8cpp.tex  sensor__processor__node_8cpp__incl.eps  sensor__processor__node_8cpp__incl.md5  sensor__processor__node_8h.tex  sensor__processor__node_8h__dep__incl.eps  sensor__processor__node_8h__dep__incl.md5  sensor__processor__node_8h__incl.eps  sensor__processor__node_8h__incl.md5
doc/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_78.js  classes_73.js  enums_66.js  enumvalues_73.js  files_61.js  files_65.js  files_67.js  files_70.js  files_73.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  functions_67.js  functions_6d.js  functions_6f.js  functions_70.js  functions_72.js  functions_73.js  functions_74.js  functions_77.js  (+18 more)
include/lara_rgbd/: lara_rgbd_node.h
include/lara_rgbd/map_manager/: map_manager.h
include/lara_rgbd/sensor_processor/: sensor_processor.h
include/lara_rgbd/state_estimator/: state_estimator.h
include/sensor_processor/: new_sensor_processor_node.h  sensor_processor.h  sensor_processor_node.h
include/state_estimator/: state_estimator.h  state_estimator_node.h
launch/: lara_rgbd.launch  lara_rgbd_shortcut.sh  rgbd_dataset.launch  sensor_processor.launch  settings.rviz  state_estimator.launch  visualization.launch
src/lara_rgbd/: lara_rgbd_node.cpp
src/lara_rgbd/map_manager/: map_manager.cpp
src/lara_rgbd/sensor_processor/: sensor_processor.cpp
src/lara_rgbd/state_estimator/: state_estimator.cpp
src/sensor_processor/: new_sensor_processor_node.cpp  sensor_processor.cpp  sensor_processor_node.cpp
src/state_estimator/: state_estimator.cpp  state_estimator_node.cpp
